// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CarModels /> when component initalizes should initalize to loading 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <CarModels />
</Router>
`;

exports[`<CarModels /> when component loads should render models with links 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <CarModels
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "consistent",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "consistent",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "make": "Horrible",
          },
        }
      }
    >
      <div
        className="container"
      >
        <h1
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
           Select Model 
        </h1>
        <div>
          <div
            className="d-flex flex-wrap justify-content-center"
          >
            <div
              className="col-4 text-center"
              key="Sonata"
            >
              <Link
                className="btn btn-lg btn-primary"
                to="/model/Sonata"
                type="button"
              >
                <LinkAnchor
                  className="btn btn-lg btn-primary"
                  href="/model/Sonata"
                  navigate={[Function]}
                  type="button"
                >
                  <a
                    className="btn btn-lg btn-primary"
                    href="/model/Sonata"
                    onClick={[Function]}
                    type="button"
                  >
                    Sonata
                  </a>
                </LinkAnchor>
              </Link>
            </div>
            <div
              className="col-4 text-center"
              key="Elantra"
            >
              <Link
                className="btn btn-lg btn-primary"
                to="/model/Elantra"
                type="button"
              >
                <LinkAnchor
                  className="btn btn-lg btn-primary"
                  href="/model/Elantra"
                  navigate={[Function]}
                  type="button"
                >
                  <a
                    className="btn btn-lg btn-primary"
                    href="/model/Elantra"
                    onClick={[Function]}
                    type="button"
                  >
                    Elantra
                  </a>
                </LinkAnchor>
              </Link>
            </div>
            <div
              className="col-4 text-center"
              key="Hotel"
            >
              <Link
                className="btn btn-lg btn-primary"
                to="/model/Hotel"
                type="button"
              >
                <LinkAnchor
                  className="btn btn-lg btn-primary"
                  href="/model/Hotel"
                  navigate={[Function]}
                  type="button"
                >
                  <a
                    className="btn btn-lg btn-primary"
                    href="/model/Hotel"
                    onClick={[Function]}
                    type="button"
                  >
                    Hotel
                  </a>
                </LinkAnchor>
              </Link>
            </div>
            <div
              className="col-4 text-center"
              key="Trivago"
            >
              <Link
                className="btn btn-lg btn-primary"
                to="/model/Trivago"
                type="button"
              >
                <LinkAnchor
                  className="btn btn-lg btn-primary"
                  href="/model/Trivago"
                  navigate={[Function]}
                  type="button"
                >
                  <a
                    className="btn btn-lg btn-primary"
                    href="/model/Trivago"
                    onClick={[Function]}
                    type="button"
                  >
                    Trivago
                  </a>
                </LinkAnchor>
              </Link>
            </div>
          </div>
        </div>
        <button
          className="mt-3 btn btn-secondary"
          onClick={[Function]}
          type="button"
        >
          Return to Makes
        </button>
      </div>
    </CarModels>
  </Router>
</BrowserRouter>
`;

exports[`<CarModels /> when the api call fails should render a ErrorDisplay 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <CarModels
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "consistent",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "consistent",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "make": "Horrible",
          },
        }
      }
    >
      <ErrorDisplay
        title="Select Model"
      >
        <div>
          <h1
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            Select Model
          </h1>
          <Alert
            closeLabel="Close alert"
            key="error"
            show={true}
            style={
              Object {
                "textAlign": "center",
              }
            }
            transition={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "appear": false,
                  "in": false,
                  "mountOnEnter": false,
                  "timeout": 300,
                  "unmountOnExit": false,
                },
                "render": [Function],
              }
            }
            variant="warning"
          >
            <Fade
              appear={false}
              in={true}
              mountOnEnter={false}
              style={
                Object {
                  "textAlign": "center",
                }
              }
              timeout={300}
              unmountOnExit={true}
            >
              <Transition
                addEndListener={[Function]}
                appear={false}
                enter={true}
                exit={true}
                in={true}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                style={
                  Object {
                    "textAlign": "center",
                  }
                }
                timeout={300}
                unmountOnExit={true}
              >
                <div
                  className="fade alert alert-warning show"
                  role="alert"
                  style={
                    Object {
                      "textAlign": "center",
                    }
                  }
                >
                  An error has occurred while loading, please refresh and try again.
                </div>
              </Transition>
            </Fade>
          </Alert>
        </div>
      </ErrorDisplay>
    </CarModels>
  </Router>
</BrowserRouter>
`;
